feat(catalog): qualify Qwen2.5 Coder 1.5B RAG