@@ -192,7 +192,7 @@ class ModelPerformanceProfileRegistryTest {
   void aggregateCatalogPublishesControlledCompilerComparisons() {
     ModelPerformanceProfileRegistry registry = ModelPerformanceProfileRegistry.fromClasspath();
 
-    assertEquals(17, registry.profiles().size());
+    assertEquals(18, registry.profiles().size());
     assertTrue(
         registry.profiles().stream()
             .anyMatch(
@@ -516,6 +516,53 @@ class ModelPerformanceProfileRegistryTest {
                             .get("candidateReportSha256")
                             .equals(
                                 "f09336788d9dfbead64dacbbfa68d756c34f5acb6cc4122f741bc0bcbb737f72")));
+    assertTrue(
+        registry.profiles().stream()
+            .anyMatch(
+                profile ->
+                    profile
+                            .id()
+                            .equals(
+                                "qwen2_5_coder_1_5b_q4_0_epyc_milan_jdk25_rust_ffm_coding")
+                        && profile.backend().equals("rust-ffm")
+                        && profile
+                            .recommendations()
+                            .get("models.purejava.q4Kernel")
+                            .equals("unsigned-pairwise")
+                        && profile
+                            .javaLaunch()
+                            .orElseThrow()
+                            .jvmArguments()
+                            .equals(
+                                List.of(
+                                    "--enable-native-access=ALL-UNNAMED",
+                                    "-Djdk.graal.MaximumInliningSize=10000",
+                                    "-Dvectors.gguf.threads=4"))
+                        && profile.safeForAutomaticSelection()
+                        && profile
+                            .evidence()
+                            .benchmarkId()
+                            .equals("qwen2.5-coder-1.5b-q4-hybrid-coding-20260724")
+                        && profile.evidence().trials() == 27
+                        && profile.evidence().outputHashesMatch()
+                        && profile
+                            .evidence()
+                            .controls()
+                            .get("pairedRawOutputSha256")
+                            .equals(
+                                "6371b16b864fbe846dd7f2b03e0439f89ff357733e0d9443f9a45f9d63d47fdc")
+                        && profile
+                            .evidence()
+                            .controls()
+                            .get("baselineReportSha256")
+                            .equals(
+                                "a2d6e6d5bcd91886595424b28487378dd7e75aa0e8f00f6ce9abbb7930979e45")
+                        && profile
+                            .evidence()
+                            .controls()
+                            .get("candidateReportSha256")
+                            .equals(
+                                "9e98947ae5747ef7d433b88fc4b174863667f4a7b4b6b82ed4eeb448adf18e31")));
     assertTrue(
         registry.profiles().stream()
             .anyMatch(
